# python-grpctutor

./: Dockerfile  Dockerfile.service  Dockerfile.webserver  README.md  docker-compose.yml  pyproject.toml
grpctutor/: clean_pycache.sh  client.py  server.py  service.py
grpctutor/clients/: __init__.py  client.py  hello.py
grpctutor/pb2/: hello_pb2.py  hello_pb2_grpc.py
grpctutor/services/: __init__.py  hello.py
grpctutor/services/hello/: client.py  service.py
k8s/: app.yml
laravel-webserver/: composer.json
laravel-webserver/routes/: web.php
node-webserver/: index.js  package-lock.json  package.json
php-client/: client.php  composer.json
protos/: hello.proto
