[tool.poetry]
name = "grpctutor"
version = "0.1.0"
description = ""
authors = ["Andreas Atle <atle.andreas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio-tools = "^1.57.0"
asyncio = "^3.4.3"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
